--- a/task-03.html
+++ b/task-03.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="./css/main.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Задание 3</title>
     <style>
@@ -20,7 +21,7 @@
 <body>
     <p><a href="index.html">На главную</a></p>
 
-    <ul id="gallery"></ul>
+    <ul id="gallery" class="gallery"></ul>
     
     <script src="js/task-03.js" type="module"></script>
 </body>
